finished the trip page. There are a few things to do. But frontend is pretty much done

--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -17,6 +17,10 @@
   border-radius: 25px;
 }
 
+// .other-banner {
+//   background-image: linear-gradient(rgba(255, 255, 255, 0), black), url('https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/profile_bg.jpeg');
+// }
+
 .btn {
   width: 130px;
   border-radius: 10px;
