--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="mb-4">
-      <div id="bannerhp">
+      <div id="bannerhp" class="main-banner">
         <h1>Make friends, save </h1>
         <h1>money, travel more.</h1>
         <div class="btn">
