--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,26 +1,27 @@
 <main class="mt-5 wrapper">
-  <div id="bannerhp" class="mb-5 banner-owner">
-    <div class="trip-owner">
-      <div class="row">
-        <div class="col owner-card">
-          <div class="profile-img">
-              <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
-          </div>
-          <h1 class="owner fs-1 text-center">Welcome to Anas trip!</h1>
-          <p class="description fs-3 text-center"> <%= @trip.description  %></p>
-        </div>
-      </div>
-        <div class="d-flex ms-4">
-          <div class="btn btn-dark">Join The Trip</div>
-           <%#= fa_icon('solid heart')  %>
-           <%#= fas_icon('paper-plane')  %>
-           <%#= fas_icon('share')  %>
-           <i class="bi bi-heart-fill"></i>
-           <i class="bi bi-send-fill"></i>
-           <i class="bi bi-share-fill"></i>
+    <!-- BANNER -->
+  <div class="mb-5 profile-banner">
+  
+      <!-- TRIP CARD -->
+      <div class="trip-owner">
+        <div class="row">
+          <div class="col owner-card">
 
+          <!-- PROFILE -->
+            <div class="profile-img">
+                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
+            </div>
+            <h1 class="owner fs-1 text-center">Welcome to Anas trip!</h1>
+            <p class="description fs-3 text-center"> <%= @trip.description  %></p>
+          </div>
         </div>
-    </div>
+          <div class="d-flex ms-4 icons">
+            <div class="btn btn-dark join-btn">Join The Trip</div>
+            <p class="icon"><%= fa_icon('heart')  %></p>
+            <p class="icon"><%= fa_icon('paper-plane')  %></p>
+            <p class="icon"><%= fa_icon('share')  %></p>
+          </div>
+      </div>
     </div>
     <div class="container mb-4">
       <div class="row">
