place banner/home-page h1 to bottom

--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -8,9 +8,8 @@
   align-content: center;
   margin: 20px;
   padding-left: 50px;
-  padding-bottom: 20%;
-  padding-top: 50px;
-  // padding-bottom: 40px;
+  padding-bottom: 20px;
+  padding-top: 310px;
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
