--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -151,6 +151,14 @@ section .box .image img{
   background: gray;
 }
 
+.swiper-button-prev {
+  left: 85px;
+}
+
+.swiper-button-next {
+  right: 85px;
+}
+
 .swiper-button-next, .swiper-button-prev{
   opacity: 0.7;
   color: $light-gray;
