--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,12 +8,14 @@
     <div class="wrapping">
       <div class="search row">
         <%= form_with url: "/", method: :get do |form| %>
-          <%= form.label :query, "Search for:" %>
-          <%= form.text_field :query %>
-          <div class ="searchButton"><%= form.submit "Search" %> </div>
+          <%= form.text_field :query, class: "search", placeholder: "search..."%>
+          <div class ="searchButton">
+          <%= image_submit_tag('https://res.cloudinary.com/dhilged09/image/upload/v1647366082/development/magnifying-glass-solid_k2gshp.svg', class: "style_image") %>
         <% end %>
+        </div>
       </div>
-    </div>
+  </div>
+
 
    <!-- <div class="wrapping"> -->
    <!--   <div class="search row"> -->
