--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,12 @@
         <%= link_to trip_path(trip), class: "link_to_class" do %>
           <div class="card">
             <div class="d-flex bd-highlight">
-              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <% if trip.photo.attached? %>
+                <%= cl_image_tag trip.photo.key, height: 300, width: 300, crop: :fill %>
+              <% else %>
+                <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <% end %>
+              <!--<img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />-->
               <div class="p-3 flex-fill bd-highlight">
                 <h2 class="pb-2"><strong> <%= trip.name %></strong></h2>
                 <ul>
