I've worked on the backend and a bit of styling for the trips page

--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -13,6 +13,7 @@
   background-size: 80%;
   animation: shine 5s linear infinite;
   position: relative;
+  margin-top: 30px;
 }
 
 @keyframes shine {
