--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -6,14 +6,13 @@
   flex-direction: column;
   justify-content: left;
   align-content: center;
-  margin: 20px;
   padding-left: 50px;
   padding-bottom: 20px;
   padding-top: 310px;
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 25px;
+  width: 100%;
 }
 
 // .other-banner {
