--- a/app/assets/stylesheets/components/search_bar.scss
+++ b/app/assets/stylesheets/components/search_bar.scss
@@ -50,4 +50,11 @@ body{
   padding-top: 5px;
 }
 
-
+.style_image {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 5px;
+  left: 20px;
+  fill: rgba(0, 0, 0, 0.5);
+}
