I've worked on the chat messages. It's functional. Just need styling and its connections.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,16 +16,7 @@
       </div>
   </div>
 
-  <!-- OLD SEARCH BAR  -->
-
-   <!-- <div class="wrapping"> -->
-   <!--   <div class="search row"> -->
-   <!--       <input type="text" class="searchTerm col" placeholder="search..."> -->
-   <!--       <div type="submit" class="searchButton col"> -->
-   <!--         <i class="fa fa-search"></i> -->
-   <!--       </div> -->
-   <!--   </div> -->
-   <!-- </div> -->
+  
 
 
   <div class="dropdown">
@@ -35,6 +26,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+      <!-- NEED TO REPLACE THE AVATAR FOR CURRENT USER NAME  -->
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
