checking out to push chat on heroku, progress same

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,29 @@
 <main class="mt-5 wrapper">
+
   <div class="container">
       <div class="row align-items-start">
 
         <div class="col">
-          <div class="profile">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
+          <div class="card">
+            <div class="card-body">
+              <div class="mb-4 profile">
+                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
+              </div>
+              <p>Update photo</p>
+              <div class="extra_info">
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="col">
           <h1>Hi, I am <%= current_user.full_name %> !</h1>
-          <p> Joined <%= current_user.created_at.year %></p>
+          <p>Joined <%= current_user.created_at.year %></p>
+          <p>Edit</p>
         </div>
 
       </div>
       <div class="push"></div>
   </div>
+
 </main>
