--- a/app/assets/stylesheets/pages/_user.scss
+++ b/app/assets/stylesheets/pages/_user.scss
@@ -1,16 +1,14 @@
-.profile{
-  border-radius: 50%;
-  padding: 3px;
-  background: $white;
-  box-shadow: 2px 3px rgba(0, 0, 0, 0.3);
-  height: 128px;
-  width: 128px;
+
+#reviews {
+  text-decoration: underline;
 }
 
-.profile img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  // border: 1px solid #fff;
+#edit {
+  text-decoration: underline;
+}
+
+.wrapper_profile {
+  margin-top: 6em;
+  justify-content: center;
+
 }
