--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <main class="mt-5 wrapper">
 
+<!-- Userprofile 1st part -->
+
   <div class="container pt-5 wrapper_profile">
     <div class="row align-items-start">
+
+    <!-- Userprofile left half-->
         <div class="col"style="flex: 0.6 0 0%;">
           <div class="userprofile-card ms-4">
             <div id="userprofile-picture">
@@ -19,6 +23,7 @@
             </div>
           </div>
         </div>
+    <!-- Userprofile beginning of right half-->
         <div class="col">
           <div class="container pt-2">
             <div class="row align-items-start" style="display: contents;">
@@ -43,8 +48,39 @@
             </div>
           </div>
         </div>
+      <!-- Userprofile end of right half-->
       </div>
     </div>
+
+<!-- Userprofile 2nd part -->
+  <div class="container">
+    <div class="card-group">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="push"></div>
 </main>
