--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,4 +1,4 @@
-.card {
+#card-product {
   overflow: hidden;
   height: 300px;
   width: 830px;
@@ -9,35 +9,35 @@
   border: 1px solid #000000;
 }
 
-.card img {
+#card-product img {
   height: 300px;
   width: 225px;
   object-fit: cover;
 }
 
-.card .profile-icon {
+#card-product .profile-icon {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
 
-.card p {
+#card-product p {
   font-size: 13px;
 }
 
-.card h2 {
+#card-product h2 {
   font-size: 26px;
 }
 
-.card h3 {
+#card-product h3 {
   font-size: 18px;
 }
 
-.card h4 {
+#card-product h4 {
   font-size: 16px;
 }
 
-.card li {
+#card-product li {
   list-style-type: none;
 }
 
