--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -39,3 +39,37 @@
     border-radius: 5px !important;
   }
 }
+
+.bubble {
+  width: 300px;
+  margin: 50px auto;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 20px;
+  text-align: center;
+  font-weight: 900;
+  color: #fff;
+  font-family: arial;
+  position:relative;
+  border-radius: 10px;
+}
+
+.sb1:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 10px solid rgba(0, 0, 0, 0.6);
+  border-right: 10px solid transparent;
+  border-top: 10px solid rgba(0, 0, 0, 0.6);
+  border-bottom: 10px solid transparent;
+  right: -20px;
+  top: 6px;
+}
+
+.received-message {
+ // Put things here
+}
+
+.sent-message {
+  margin-left: 50%;
+}
