--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div id="message-<%= message.id %>">
+<div class="<%= css_class %> bubble" id="message-<%= message.id %>">
   <small>
     <strong><%= message.user.user_name %></strong>
     <span> | <i> <%= message.created_at.strftime("%a %b %e at %l:%M %p") %> </i> | </span>
