--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,7 +1,5 @@
-<h1>#<%= @chatroom.name %></h1>
-
 <div class="chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
-  
+  <h1><%= @chatroom.name %><i class='ms-2 fas fa-comment-dots' style='font-size:36px'></i></h1>
   <div class="messages" data-chatroom-subscription-target="messages">
     <div class="messages" data-chatroom-subscription-target="messages">
       <% @chatroom.messages.each do |message| %>
