--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,7 +16,7 @@
           </div>
         </div>
           <div class="d-flex ms-4 icons">
-          <%= simple_form_for :booking, method: "get" do |f| %>
+          <%= simple_form_for [@trip, @booking] do |f| %>
             <%= f.button :submit, "Join The Trip", class: "btn btn-dark join-btn" %>
           <% end %>
 
