--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,35 +57,20 @@
   <div class="container">
     <h3>My trips</h3>
 
+    <% current_user.bookings.each do |booking| %>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+          <img <%= booking.trip.photo %>class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title"><%= booking.trip.name %></h5>
+            <p class="card-text"><%= booking.trip.location %></p>
+            <p class="card-text">Date: <%= booking.trip.start_date %> - <p class="card-text"><%= booking.trip.end_date %></p></p>
           </div>
         </div>
       </div>
     </div>
+    <% end %>
   </div>
 <!-- User Bookmarks -->
   <div class="container">
