added status to booking

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,7 +65,8 @@
           <div class="card-body">
             <h5 class="card-title"><%= booking.trip.name %></h5>
             <p class="card-text"><%= booking.trip.location %></p>
-            <p class="card-text">Date: <%= booking.trip.start_date %> - <p class="card-text"><%= booking.trip.end_date %></p></p>
+            <p class="card-text">Date: <%= booking.trip.start_date %> - < class="card-text"><%= booking.trip.end_date %></p>
+           <!-- <p class="card-text"><%= booking.status %></p> -->
           </div>
         </div>
       </div>
