--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -4,12 +4,12 @@
   height: calc(100vh - 75px);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-grow: 1;
-  width: 60%;
-
-  h1 {
+  // width: 60%;
+}
+  .chatroom h1 {
     border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
     padding: 1rem;
@@ -25,7 +25,7 @@
 
   #new_message {
     border-top: 1px solid $gray-200;
-    padding: 1rem;
+    // padding: 1rem;
     width: 100%;
     align-items: baseline;
 
@@ -38,10 +38,9 @@
     margin-left: 15px;
     border-radius: 5px !important;
   }
-}
 
 .bubble {
-  width: 300px;
+  // width: 40%;
   padding: 10px;
   text-align: center;
   font-weight: 900;
