--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,25 +1,25 @@
-<div class="chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
-  <h1><%= @chatroom.name %><i class='ms-2 fas fa-comment-dots' style='font-size:36px'></i></h1>
-  <div class="messages" data-chatroom-subscription-target="messages">
-    <div class="messages" data-chatroom-subscription-target="messages">
-      <% @chatroom.messages.each do |message| %>
-        <% if message.user == current_user %>
-          <%= render 'messages/message', message: message, css_class: 'sent-message' %>
-        <% else %>
-          <%= render 'messages/message', message: message, css_class: 'received-message' %>
-        <% end %>
-      <% end  %>
-    </div>
-  </div>
-      <%= simple_form_for [@chatroom, @message],
-        remote: true,
-        html: {class: "d-flex"} do |f|
-      %>
-        <%= f.input :content,
-          label: false,
-          placeholder: "Message ##{@chatroom.name}",
-          wrapper_html: {class: "flex-grow-1"}
-        %>
-        <%= f.submit "Send", class: "send-btn btn btn-primary" %>
-      <% end %>
+    <div class="chatroom mx-auto" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
+      <h1 class="fs-4"><%= @chatroom.name %><i class='ms-2 fas fa-comment-dots' style='font-size:36px'></i></h1>
+      <div class="messages" data-chatroom-subscription-target="messages">
+        <div class="messages" data-chatroom-subscription-target="messages">
+          <% @chatroom.messages.each do |message| %>
+            <% if message.user == current_user %>
+              <%= render 'messages/message', message: message, css_class: 'sent-message' %>
+            <% else %>
+              <%= render 'messages/message', message: message, css_class: 'received-message' %>
+            <% end %>
+          <% end  %>
+        </div>
+      </div>
+          <%= simple_form_for [@chatroom, @message],
+            remote: true,
+            html: {class: "d-flex"} do |f|
+          %>
+            <%= f.input :content,
+              label: false,
+              placeholder: "Message ##{@chatroom.name}",
+              wrapper_html: {class: "flex-grow-1"}
+            %>
+            <%= f.submit "Send", class: "send-btn btn btn-primary" %>
+          <% end %>
 </div>
