--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
       </div>
   </div>
 
-  
+
 
 
   <div class="dropdown">
@@ -42,6 +42,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Messages", "#", class: "dropdown-item" %>
               <%= link_to "Notifications", "#", class: "dropdown-item" %>
+              <%= link_to "Create trip", "/trips/new", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
