--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,8 +1,7 @@
-<div>
   <div class="<%= css_class %> bubble" id="message-<%= message.id %>">
     <small class="user-msg">
      <%= message.user.user_name %>
+     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
     </small>
     <p><%= message.content %></p>
   </div>
-</div>
