was trying to fix the issue. Couldn't do it. Done small styling changes

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -21,6 +21,13 @@
     padding: 1rem;
     color: black;
     width: 100%;
+    font-size: smaller;
+  }
+
+  .user-msg {
+    font-size: x-small;
+    font-style: italic;
+    font-weight: 300;
   }
 
   #new_message {
