--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,7 @@
 <!-- Userprofile 2nd part -->
 <!-- User Trips -->
   <div class="container">
-    <h3>My trips</h3>
+    <h3>Bookings</h3>
 
     <% current_user.bookings.each do |booking| %>
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -75,7 +75,7 @@
   </div>
 <!-- User Bookmarks -->
   <div class="container">
-    <h3>Bookmarks</h3>
+    <h3>Favorites</h3>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
