halfway through fixing

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-  <div class="<%= css_class %>" id="message-<%= message.id %>">
+  <div class="sent-message bubble" id="message-<%= message.id %>">
     <small class="user-msg">
      <%= message.user.user_name %> -
      <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
