--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+
   // width: 60%;
 
   h1 {
@@ -52,7 +53,7 @@
   padding: 10px;
   text-align: center;
   font-weight: 900;
-  color: #fff;
+  color: #000;
   font-family: arial;
   position:relative;
   border-radius: 10px;
