--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -8,9 +8,9 @@
   <div class="messages" data-chatroom-subscription-target="messages">
     <% @chatroom.messages.each do |message| %>
       <% if message.user == current_user %>
-        <%= render 'messages/message', message: message, css_class: 'sent-message bubble' %>
+        <%= render 'messages/message', message: message, css_class: 'sent-message' %>
       <% else %>
-        <%= render 'messages/message', message: message, css_class: 'received-message bubble' %>
+        <%= render 'messages/message', message: message, css_class: 'received-message' %>
       <% end %>
     <% end  %>
   </div>
