--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,11 +61,11 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img <%= booking.trip.photo %>class="card-img-top" alt="...">
+          <%= cl_image_tag booking.trip.photo.key, class: "card-img-top"%>
           <div class="card-body">
-            <h5 class="card-title"><%= booking.trip.name %></h5>
-            <p class="card-text"><%= booking.trip.location %></p>
-            <p class="card-text">Date: <%= booking.trip.start_date %> - < class="card-text"><%= booking.trip.end_date %></p>
+            <h5 class="card-title">Trip name: <%= booking.trip.name %></h5>
+            <p class="card-text">Location: <%= booking.trip.location %></p>
+            <p class="card-text"> Date: <%= booking.trip.start_date %> - <%= booking.trip.end_date %></p>
            <!-- <p class="card-text"><%= booking.status %></p> -->
           </div>
         </div>
