--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -9,9 +9,14 @@
 
           <!-- PROFILE -->
             <div class="profile-img">
-                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
+              <% if @trip.user.photo.attached? %>
+                <%= cl_image_tag trip.user.photo.key, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <% else %>
+                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <% end %>
+                <!--<img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="">-->
             </div>
-            <h1 class="owner fs-1 text-center">Welcome to Ana trip!</h1>
+            <h1 class="owner fs-1 text-center">Welcome to <%= @trip.user.user_name %>'s trip!</h1>
             <p class="description fs-3 text-center"> Surf, Hike, Shopping</p>
           </div>
         </div>
@@ -38,7 +43,12 @@
     <div class="container mb-4">
       <div class="row">
         <div class="col-sm-6 col-md-5 col-lg-6 ms-4">
-          <img id="trip-pic" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs2.jpeg'>
+          <% if @trip.photo.attached? %>
+                <%= cl_image_tag @trip.photo.key, height: 400, width: 500, crop: :fill %>
+              <% else %>
+                <img id="trip-pic" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs2.jpeg'>
+              <% end %>
+          <!--<img id="trip-pic" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs2.jpeg'>-->
         </div>
 
         <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0 trip-descript">
