--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,9 +56,9 @@
 <!-- User Trips -->
   <div class="container">
     <h3>Bookings</h3>
-
-    <% current_user.bookings.each do |booking| %>
+    <div class="mb-2"><%= link_to "See all", bookings_path(current_user) %></div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
+    <% current_user.bookings.first(3).each do |booking| %>
       <div class="col">
         <div class="card h-100">
           <%= cl_image_tag booking.trip.photo.key, class: "card-img-top"%>
@@ -70,8 +70,8 @@
           </div>
         </div>
       </div>
-    </div>
     <% end %>
+    </div>
   </div>
 <!-- User Bookmarks -->
   <div class="container">
