--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -53,7 +53,7 @@
   padding: 10px;
   text-align: center;
   font-weight: 900;
-  color: #000;
+  color: #fff;
   font-family: arial;
   position:relative;
   border-radius: 10px;
