--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,22 +1,23 @@
-<div class="chatroom mx-auto" 
-  data-controller="chatroom-subscription" 
-  data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
->
-  
-  <h1 class="fs-4">#<%= @chatroom.name %></h1>
-     
-  <div class="messages" data-chatroom-subscription-target="messages">
+<div data-controller='chatroom-subscription' class="container">
+
+  <h1>#<%= @chatroom.name %></h1>
+  <div id="messages" data-chatroom-subscription-target='messages' data-chatroom-id="<%= @chatroom.id %>" data-current-user-id="<%= current_user.id %>">
     <% @chatroom.messages.each do |message| %>
+    
       <% if message.user == current_user %>
         <%= render 'messages/message', message: message, css_class: 'sent-message' %>
       <% else %>
         <%= render 'messages/message', message: message, css_class: 'received-message' %>
       <% end %>
-    <% end  %>
+    
+    <% end %>
   </div>
+
     <%= simple_form_for [@chatroom, @message],
       remote: true,
-      html: {class: "d-flex"} do |f|
+      html: {data: {
+        chatroom_subscription_target: 'form'}, 
+        class: "d-flex" } do |f|
     %>
       <%= f.input :content,
         label: false,
