--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,7 +1,7 @@
-<div data-controller='chatroom-subscription' class="container">
+<div data-controller='chatroom-subscription' class="container chatroom">
 
   <h1>#<%= @chatroom.name %></h1>
-  <div id="messages" data-chatroom-subscription-target='messages' data-chatroom-id="<%= @chatroom.id %>" data-current-user-id="<%= current_user.id %>">
+  <div class="messages" id="messages" data-chatroom-subscription-target='messages' data-chatroom-id="<%= @chatroom.id %>" data-current-user-id="<%= current_user.id %>">
     <% @chatroom.messages.each do |message| %>
     
       <% if message.user == current_user %>
@@ -17,7 +17,7 @@
       remote: true,
       html: {data: {
         chatroom_subscription_target: 'form'}, 
-        class: "d-flex" } do |f|
+        class: "d-flex #new_message" } do |f|
     %>
       <%= f.input :content,
         label: false,
