started to work on the meail notification

--- a/app/views/user_mailer/join.html.erb
+++ b/app/views/user_mailer/join.html.erb
@@ -1,3 +1,11 @@
+<style>
+.email-title {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  text-align: center;
+}
+
+</style>
 <h1 class="email-title">TRAVEL TRIBE</h1>
 
 <h2>
