Add dotenv - Protect my secret data in .env file

--- a/app/views/user_mailer/join.html.erb
+++ b/app/views/user_mailer/join.html.erb
@@ -13,7 +13,7 @@
 </h2>
 
 <div class="container">
-  <h4>Hi <%= @user.full_name %>,</h4>
+  <h4 class="">Hi <%= @user.full_name %>,</h4>
 
   <p>Happy days!!! Somebody just request to join your trip!</p>
   <p>Go check it out and see if you approve that person!</p>
