trip bookings can now be rejected

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,6 +7,7 @@
             <%= trip.name %>
             <%= booking.user.full_name %>
              <%= link_to "Accept", accept_trip_booking_path(trip, booking), class: "btn btn-primary", method: "POST" %>
+             <%= link_to "Reject", reject_trip_booking_path(trip, booking), class: "btn btn-primary", method: "POST" %>
           </div>
         </div>
       <% end %>
