--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
     </div>
 
 <!-- Userprofile 2nd part -->
-<!-- User Trips -->
+<!-- User Bookings -->
   <div class="container">
     <h3>Bookings</h3>
     <div class="mb-2"><%= link_to "See all", bookings_path(current_user) %></div>
