--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
       <div class="col">
         <div class="card h-100">
           <% if booking.trip.photo.attached? %>
-            <%= cl_image_tag booking.trip.photo.key, height: 80, width: 100, crop: :fill %>
+            <%= cl_image_tag booking.trip.photo.key, class: "card-img-top"%>
           <% else %>
             <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <% end %>
