added Bookmark function with simple function on trip show page. Still needs styling

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,6 +42,7 @@
               <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Messages", "trips/id/chatrooms/id", class: "dropdown-item" %>
               <%= link_to "Bookings", bookings_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Favorites", bookmarks_path(current_user), class: "dropdown-item" %>
               <%= link_to "Create trip", "/trips/new", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
