--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,6 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 
 // Bootstrap
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
+// Geocoder (MAP)
+@import "mapbox-gl/dist/mapbox-gl";
