--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -83,12 +83,15 @@
           <% end %>
         </div>
       <% end %>
-        <!-- MAP STARTS HERE -->
 
-        <div class="map">
+        <!-- === MAP STARTS HERE === -->
 
-          <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
-        </div>
+      <div style="width: 100%; height: 600px;"
+        data-controller="mapbox"
+        data-mapbox-markers-value="<%= @markers.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+
     </div>
       <div class="push"></div>
   </div>
